Added functionality to show helppage (which shows a html representation of the generated swagger.yaml specification.
